Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </section>
 
     <section id="details">
-      <footer></footer>
+      <footer>id </footer>
       <div>
         <h3>Contact</h3>
         <p>
