--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </section>
 
     <section id="details">
-      <footer>id ="details" display= </footer>
+      <footer>id ="details" display="block"></footer>
       <div>
         <h3>Contact</h3>
         <p>
