Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </section>
 
     <section id="details">
-      <footer>id ="details" display="block"></footer>
+      <footer>id ="details" display="block">
       <div>
         <h3>Contact</h3>
         <p>
@@ -64,5 +64,6 @@
         </p>
       </div>
     </section>
+   </footer>
   </body>
 </html>
